--- a/package.json
+++ b/package.json
@@ -13,25 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.11.0",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "express": "^4.17.1",
-    "generate-password": "^1.5.1",
-    "graphql": "^14.6.0",
-    "graphql-subscriptions": "^1.1.0",
-    "helmet": "^3.22.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "merge-graphql-schemas": "^1.7.6",
-    "mysql2": "^2.1.0",
-    "nodemailer": "^6.4.6",
-    "sequelize": "^5.21.5",
-    "subscriptions-transport-ws": "^0.9.16",
-    "umzug": "^2.3.0",
-    "validator": "^13.0.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
